# midpoint-engine

./: Cargo.toml
src/: handlers.rs  lib.rs  main.rs  startup.rs
src/animations/: mod.rs  motion_path.rs  render_skeleton.rs  skeleton.rs
src/behaviors/: chase.rs  melee.rs  mod.rs  wander.rs
src/core/: Grid.rs  PlayerCharacter.rs  Rays.rs  RendererState.rs  RootNode.rs  RotationGizmo.rs  ScaleGizmo.rs  SimpleCamera.rs  SimpleGizmo.rs  TestTransformGizmo.rs  Transform.rs  TranslationGizmo.rs  Viewport.rs  mod.rs
src/helpers/: landscapes.rs  mod.rs  saved_data.rs  utilities.rs
src/landscapes/: ChunkedTerrainGenerator.rs  Landscape.rs  LandscapeLOD.rs  LandscapeManager.rs  QuadNode.rs  TerrainManager.rs  mod.rs
src/lighting/: LightState.rs  mod.rs
src/models/: GLBImporter.rs  Model.rs  mod.rs
src/shaders/: primary_fragment.wgsl
src/shapes/: Cube.rs  Pyramid.rs  Sphere.rs  mod.rs
