[package]
name = "midpoint-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.11.0"
wgpu = "22.1.0"
raw-window-handle = "0.6.2"
winit = { version = "0.29.15", features = ["rwh_05"] }
nalgebra = "0.32.5"
nalgebra-glm = "0.18.0"
bytemuck = "1.15.0"
tokio = "1.41.0"
base64 = "0.22.1"
image = "0.25.1"
tiff = "0.9.1"
reqwest = { version = "0.12.4", features = ["json"] }
reqwest-graphql = "1.0.0"
regex = "1"
uuid = { version = "1.8.0", features = ["v4"] }
gloo-utils = "0.2.0"
rapier3d = { version = "0.20.0" }
lazy_static = "1.5.0"
directories = "5.0.1"
rand = "0.8.5"
floem = { path = "D:/projects/common/common-floem", features = ["tokio"] }
floem_renderer = { path = "D:/projects/common/common-floem/renderer", version = "0.1.0" }
floem-winit = { git = "https://github.com/lapce/winit", rev = "c8d3b8fd6fa4ffd5e0f99be78aacddcf6de57bcd", features = [
    "rwh_05",
] }
rayon = "1.10.0"
meshopt = "0.4.1"

[dependencies.gltf]
features = ["utils"]
version = "1"

[lib]
name = "midpoint_engine"
path = "src/lib.rs"
